Enabled Git Updater functionality

--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 	Author URI: https://localboost.com
 	Template: uncode
 	Version: 0.9.1
+	
+	Update URI: joethomas/uncode-sidekick
 	GitHub Theme URI: https://github.com/joethomas/uncode-sidekick
 	GitHub Branch: main
 */
