Fixed header to update from GitHub

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 	Template: uncode
 	Version: 0.9.1
 	
-	Update URI: joethomas/uncode-sidekick
-	GitHub Theme URI: https://github.com/joethomas/uncode-sidekick
-	GitHub Branch: main
+	GitHub Theme URI: joethomas/uncode-sidekick
+	Primary Branch: main
 */
